Models and parsing
- Created character model classes
- Coded parsing of Wasteland 2 save file
- Initial Editor View work

--- a/Source/WL2.Editor/WL2.Editor.ViewModels/WL2.Editor.ViewModels.csproj
+++ b/Source/WL2.Editor/WL2.Editor.ViewModels/WL2.Editor.ViewModels.csproj
@@ -46,10 +46,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EditorViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RequestSaveFileEventArgs.cs" />
+    <Compile Include="ViewModelLocator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WL2.Editor.Models\WL2.Editor.Models.csproj">
+      <Project>{7c9c9520-06cb-47e6-9a7e-45d131f4b64d}</Project>
+      <Name>WL2.Editor.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
