--- a/Source/WL2.Editor/WL2.Editor.Models/WL2.Editor.Models.csproj
+++ b/Source/WL2.Editor/WL2.Editor.Models/WL2.Editor.Models.csproj
@@ -46,7 +46,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attribute.cs" />
+    <Compile Include="Character.cs" />
+    <Compile Include="Enums.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="IStatistic.cs" />
+    <Compile Include="Skill.cs" />
+    <Compile Include="Statistics.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
