Initial Statistic view design

--- a/Source/WL2.Editor/WL2.Editor.ViewModels/WL2.Editor.ViewModels.csproj
+++ b/Source/WL2.Editor/WL2.Editor.ViewModels/WL2.Editor.ViewModels.csproj
@@ -46,9 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CharacterViewModel.cs" />
     <Compile Include="EditorViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestSaveFileEventArgs.cs" />
+    <Compile Include="StatisticViewModel.cs" />
     <Compile Include="ViewModelLocator.cs" />
   </ItemGroup>
   <ItemGroup>
