--- a/Source/WL2.Editor/WL2.Editor.ViewModels/WL2.Editor.ViewModels.csproj
+++ b/Source/WL2.Editor/WL2.Editor.ViewModels/WL2.Editor.ViewModels.csproj
@@ -36,14 +36,17 @@
     <Reference Include="Assisticant.XAML">
       <HintPath>..\packages\Assisticant.1.1.4\lib\net45\Assisticant.XAML.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Windows" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CharacterViewModel.cs" />
