--- a/Source/WL2.Editor/WL2.Editor.Models/WL2.Editor.Models.csproj
+++ b/Source/WL2.Editor/WL2.Editor.Models/WL2.Editor.Models.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Enums.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IStatistic.cs" />
+    <Compile Include="SaveGame.cs" />
     <Compile Include="Skill.cs" />
     <Compile Include="Statistics.cs" />
   </ItemGroup>
