--- a/Source/WL2.Editor/WL2.Editor.ViewModels/WL2.Editor.ViewModels.csproj
+++ b/Source/WL2.Editor/WL2.Editor.ViewModels/WL2.Editor.ViewModels.csproj
@@ -52,6 +52,11 @@
     <Compile Include="CharacterViewModel.cs" />
     <Compile Include="EditorViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="RequestSaveFileEventArgs.cs" />
     <Compile Include="StatisticViewModel.cs" />
     <Compile Include="ViewModelLocator.cs" />
@@ -64,6 +69,15 @@
       <Project>{7c9c9520-06cb-47e6-9a7e-45d131f4b64d}</Project>
       <Name>WL2.Editor.Models</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Canyon of Titan.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
