--- a/Source/WL2.Editor/WL2.Editor.Models/WL2.Editor.Models.csproj
+++ b/Source/WL2.Editor/WL2.Editor.Models/WL2.Editor.Models.csproj
@@ -47,12 +47,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attribute.cs" />
+    <Compile Include="AvailablePoints.cs" />
     <Compile Include="Character.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IStatistic.cs" />
     <Compile Include="SaveGame.cs" />
     <Compile Include="Skill.cs" />
+    <Compile Include="StatisticChangedEventArgs.cs" />
     <Compile Include="Statistics.cs" />
   </ItemGroup>
   <ItemGroup>
