Bug fixes and tweaks to save functionality

--- a/Source/WL2.Editor/WL2.Editor.Views/WL2.Editor.Views.csproj
+++ b/Source/WL2.Editor/WL2.Editor.Views/WL2.Editor.Views.csproj
@@ -78,6 +78,9 @@
     <Compile Include="StatisticView.xaml.cs">
       <DependentUpon>StatisticView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="WL2MessageBox.xaml.cs">
+      <DependentUpon>WL2MessageBox.xaml</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -99,6 +102,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="StatisticView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="WL2MessageBox.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
